feat(cpu): added boost

--- a/src/cpu/CMakeLists.txt
+++ b/src/cpu/CMakeLists.txt
@@ -7,6 +7,6 @@ file(GLOB CPU_HEADERS
 )
 
 add_executable(cpu ${CPU_SRC} ${CPU_HEADERS})
-target_link_libraries(cpu ${OpenCV_LIBS})
+target_link_libraries(cpu ${OpenCV_LIBS} ${Boost_LIBRARIES})
 
 target_include_directories(cpu PUBLIC ../../include)
