--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,8 +41,10 @@ find_package(Boost COMPONENTS program_options REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(${Boost_INCLUDE_DIR})
+include_directories(include)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -pedantic")
 
 subdirs(src)
