--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.21)
 project(
     gpgpu
     VERSION 0.1.0
     DESCRIPTION "GPGPU"
-    LANGUAGES CXX
+    LANGUAGES CXX CUDA
 )
 
 find_package(OpenCV QUIET)
@@ -35,6 +35,7 @@ if(POLICY CMP0079)
 endif()
 
 
+find_package(CUDA REQUIRED)
 find_package(Threads REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(Boost COMPONENTS program_options REQUIRED)
@@ -44,5 +45,7 @@ include_directories(${Boost_INCLUDE_DIR})
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CUDA_STANDARD 14)
 
 subdirs(src)
+
