fix(cmake): remove cuda for macos

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,14 @@
-subdirs(
-    "cpu"
-    "stats"
-    "gpu"
-)
+if (APPLE)
+    SET(TARGETS
+        "cpu"
+        "stats"
+    )
+else()
+    SET(TARGETS
+        "cpu"
+        "stats"
+        "gpu"
+    )
+endif()
+
+subdirs(${TARGETS})
