--- a/src/gpu/CMakeLists.txt
+++ b/src/gpu/CMakeLists.txt
@@ -2,6 +2,8 @@ add_executable(gpu ${CPU_SRC} ${CPU_HEADERS})
 
 set(GPU_SRC "kernel.cu")
 target_sources(gpu PRIVATE ${GPU_SRC})
+set(CMAKE_CUDA_FLAGS_DEBUG "-g -G")
+
 
 if (NOT APPLE)
     set_property(TARGET gpu PROPERTY CUDA_ARCHITECTURES native)
