--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,11 +49,10 @@ include_directories(include)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-set (CMAKE_CXX_FLAGS "-Ofast")
-if(NOT MVSC)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -pedantic")
+if(NOT MSVC AND NOT CMAKE_CUDA_COMPILER_ID STREQUAL "NVIDIA")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -pedantic -Ofast")
 else()
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 -Ofast")
 endif()
 
 subdirs(src)
