feat(workflow: cmake): added cuda toolkit and fixed CMakeList for github Action

--- a/src/cpu/CMakeLists.txt
+++ b/src/cpu/CMakeLists.txt
@@ -7,6 +7,10 @@ file(GLOB CPU_HEADERS
 )
 
 add_executable(cpu ${CPU_SRC} ${CPU_HEADERS})
-target_link_libraries(cpu ${OpenCV_LIBS} ${Boost_LIBRARIES})
 
+find_package(OpenCV REQUIRED)
+find_package(Boost REQUIRED COMPONENTS program_options log thread)
+
+target_link_libraries(cpu ${OpenCV_LIBS} ${Boost_LIBRARIES})
+target_include_directories(cpu PUBLIC ${OpenCV_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 target_include_directories(cpu PUBLIC ../../include)
