--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -21,15 +21,22 @@ jobs:
         cuda: '12.1.0'
         method: 'network'
         sub-packages: '["nvcc"]'
-        
+    - name: Install and setup vcpkg
+      run: |
+        git clone https://github.com/Microsoft/vcpkg.git
+        cd vcpkg
+        ./bootstrap-vcpkg.bat
+        ./vcpkg integrate install
+      shell: cmd
+
     - name: Install dependencies
       run: |
-        choco install boost-msvc-14.2
-        choco install opencv
-      shell: powershell
-      
+        .\vcpkg\vcpkg install boost
+        .\vcpkg\vcpkg install opencv4[windows]:x64-windows
+      shell: cmd
+
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake
+
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
