--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -15,7 +15,7 @@ jobs:
       id: cuda-toolkit
       with:
         cuda: '12.1.0'
-        method: 'network'
+        method: 'local'
         sub-packages: '["nvcc", "cudart", "visual_studio_integration"]'
 
     - name: Setup vcpkg
