--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -14,9 +14,10 @@ jobs:
     - uses: Jimver/cuda-toolkit@v0.2.9
       id: cuda-toolkit
       with:
-        cuda: '12.1.0'
+        cuda: '12.2.0'
         method: 'network'
-        sub-packages: '["nvcc", "cudart", "visual_studio_integration"]'
+        sub-packages: '["nvcc", "cudart", "visual_studio_integration", "cufft", "cublas", "curand", "cusolver", "cusparse", "npp", "nvgraph", "nvrtc"]'
+  
 
     - name: Setup vcpkg
       run: |
